samples/bookmap/valid/R16.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita">
    <topicmeta><navtitle>Chapter Title</navtitle></topicmeta>
    <topicref href="topic1.dita"/>
    <mapref href="submap.ditamap"/>
  </chapter>
</bookmap>