samples/bookmap/invalid/R7.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle>
    <booklibrary>Lib</booklibrary>
    <mainbooktitle>Title</mainbooktitle>
  </booktitle>
  <frontmatter/> {/* Incorrect order */}
  <bookmeta/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
</bookmap>